[package]
name = "async-test"
version = "0.1.0"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
edition = "2021"
rust-version = "1.70"

description = """
An async test harness, with support for dynamic test builders and test setups
"""
documentation = "https://docs.rs/async-test"
repository = "https://github.com/conradludgate/async-test"
license = "MIT/Apache-2.0"
keywords = ["libtest", "test", "built-in", "framework", "harness"]
categories = ["development-tools::testing", "development-tools::build-utils"]
readme = "README.md"

exclude = [".github"]

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
termcolor = "1.0.5"
tokio = { version = "1.28", features = ["full"] }
inventory = "0.3.6"

[dev-dependencies]
fastrand = "1.8.0"
pretty_assertions = "1.2.1"
